add format on save and paste

--- a/clipstash/.vscode/settings.json
+++ b/clipstash/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+    "editor.formatOnSave": true,
+    "editor.formatOnPaste": true,
     "rust-analyzer.server.extraEnv": {
         "DATABASE_URL": "sqlite:data.db"
     }
